manifestos/angular-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ng-webapp
  namespace: tutorial-k8s
spec:
  selector:
    app: ng-webapp
  ports:
  - port: 4002    
    targetPort: 4002
