manifestos/angular-webapp/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ng-webapp
  namespace: tutorial-k8s
spec:
  rules:
  - host: angular-webapp.localhost
    http:
      paths:
      - backend:
          serviceName: ng-webapp
          servicePort: 4002
